--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 }
                 context.closePath();
                 // create the fill with green neon color
-                context.fillStyle = "#39ff14"; // Neon green color
+                context.fillStyle = "#ff1493"; // Pink green color
                 context.fill();
                 // create the image
                 var image = new Image();
